@@ -24,7 +24,7 @@ checkcommand.no-names: No names
 checkcommand.no-name no name
 checkcommand.one-name: one name
 checkcommand.many-names: {0,number} names
-checkcommand.list-item: &LIGHT_PURPLE- {0} &GREEN({1}). 
+checkcommand.list-item: &LIGHT_PURPLE- {0}: &GREEN{1}. 
 checkcommand.player-is-not-banned: &YELLOW{0} &GREENis not banned.
 checkcommand.used: {0} checked an alias: {1}.
 
